--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>matching game</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="js/main.js" type="module"></script>
+    <link rel="stylesheet" href="./css/style.css" />
+    <script src="./js/main.js" type="module"></script>
   </head>
   <body>
     <app-title></app-title>
