--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="./css/style.css" />
     <script src="./js/main.js" type="module"></script>
   </head>
-  <body>
+  <body class="body">
     <app-title></app-title>
+    <app-input></app-input>
     <app-cards></app-cards>
   </body>
 </html>
