add arribute to title component

--- a/index.html
+++ b/index.html
@@ -8,8 +8,25 @@
     <script src="./js/main.js" type="module"></script>
   </head>
   <body class="body">
-    <app-title></app-title>
-    <app-input></app-input>
+    <app-title title="Matching Game"></app-title>
+    <div class="form__container">
+      <app-input
+        form="number"
+        inputName="number"
+        formTitle="Select Number of Cards"
+        formLabel1="8"
+        formLabel2="16"
+        formLabel3="24"
+      ></app-input>
+      <app-input
+        form="picture"
+        inputName="picture"
+        formTitle="Select Pictures of Cards"
+        formLabel1="Color"
+        formLabel2="Animals"
+        formLabel3="Plants"
+      ></app-input>
+    </div>
     <app-cards></app-cards>
   </body>
 </html>
