add input text feature

--- a/index.html
+++ b/index.html
@@ -10,22 +10,9 @@
   <body class="body">
     <app-title title="Matching Game"></app-title>
     <div class="form__container">
-      <app-input
-        form="number"
-        inputName="number"
-        formTitle="Select Number of Cards"
-        formLabel1="8"
-        formLabel2="16"
-        formLabel3="24"
-      ></app-input>
-      <app-input
-        form="picture"
-        inputName="picture"
-        formTitle="Select Pictures of Cards"
-        formLabel1="Color"
-        formLabel2="Animals"
-        formLabel3="Plants"
-      ></app-input>
+      <app-input></app-input>
+      <app-input-theme></app-input-theme>
+      <app-input-text></app-input-text>
     </div>
     <app-cards></app-cards>
   </body>
