--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <script src="./js/main.js" type="module"></script>
   </head>
   <body class="body">
-    <app-title title="Matching Game"></app-title>
+    <app-title
+      title="Matching Game"
+      subtitle="You could start right away with default color cards OR choose image cards and number of cards OR even costomize the text cards by adding word in text input. Don't forget to click comfirm and start button. Enjoy!"
+    ></app-title>
     <div class="form__container">
       <app-input></app-input>
       <app-input-theme></app-input-theme>
