add result feature

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
       <app-input-text></app-input-text>
     </div>
     <app-cards></app-cards>
+    <app-result></app-result>
   </body>
 </html>
