--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body class="body">
     <app-title
       title="Matching Game"
-      subtitle="You could start right away with default color cards OR choose image cards and number of cards OR even costomize the text cards by adding word in text input. Don't forget to click comfirm and start button. Enjoy!"
+      subtitle="You could start right away with default color cards OR choose image cards and number of cards OR even customize the text cards by adding words in text input. Don't forget to click the 'confirm' and 'Start' button. Enjoy!"
     ></app-title>
     <div class="form__container">
       <app-input></app-input>
